# Celebi

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: image.yml  test.yml
celebi/: __main__.py  _types.py  client.py  config.py  pokemon.py  presentation.py  utils.py
celebi/astonish/: __init__.py  client.py  item.py  models.py  shop.py
celebi/discord/: __init__.py  client.py  cog.py  transformers.py  views.py
celebi/ext/: astonish.py  owner.py  pokemon.py
celebi/utils/: embed.py  pokemon.py
tests/: __init__.py  pc1.html  pc2.html  test_astonish_client.py  test_astonish_models.py  test_pokemon.py
tests/data/: inventory_empty.html  inventory_few.html  inventory_many.html  inventory_single.html  member_card.html  members.html  modcp_bryn_vaughn.html  profile_admin.html  profile_aphidoidea.html  profile_krisigos.html  profile_mnemntia.html  profile_mod.html  profile_sophist.html  profile_thiarchos.html  shop.html
