[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "celebi"
version = "0.1.0"
description = "A Discord bot to support the ASTONISH community."
license = "Proprietary"
authors = ["Sparta142 <Sparta142@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/Sparta142/Celebi"

[tool.poetry.dependencies]
"discord.py" = { version = "^2.3", extras = ["speed"] }
aiohttp = { url = "https://github.com/aio-libs/aiohttp/releases/download/v3.9.0b1/aiohttp-3.9.0b1.tar.gz" }
aiopokeapi = "^0.1.7"
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
mechanize = "^0.4.9"
msgspec = "^0.18.4"
python = "^3.12"
yarl = "^1.9.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
ruff = "^0.1.4"
pytest = "^7.4.3"

[tool.ruff]
line-length = 80

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
line-ending = "lf"
skip-magic-trailing-comma = false
